bloembraaden/_front/admin.css
/* ... */
input[type="checkbox"].peatcms_loading + label:before {
    animation: peatcms_pulsating 613ms infinite ease-in-out;
}

input[type="checkbox"].peatcms_danger:checked + label:before {
    background-color: var(--admin-color-no);
}

body .PEATCMS_admin .unsaved > input[type="checkbox"] + label:before {
    color: var(--admin-color-accent);
}

/**/

.PEATCMS_admin .pretty_parent {
    width: calc(100% - .5em);
    padding: .25em;
    border: transparent;
    color: var(--admin-color-key);
    font-weight: bold;
}

.PEATCMS_admin .suggestions div {
    padding: 0 .25em;
    cursor: pointer;
}

.PEATCMS_admin .create-new { /* inside suggestions */
    opacity: .56;
}

.PEATCMS_admin .create-new:hover { /* inside suggestions */
    opacity: 1;
}

.PEATCMS_admin .button { /* inside suggestions */
    /*margin: 0 2px;*/
}

.PEATCMS_data_stasher {
    position: absolute;
    /*    border: solid 3px var(--admin-color-accent);
        color: var(--admin-color-accent);
        border-radius: 10px;
        height: 0;
        width: 10px;
        margin-left: -10px;*/
}

.PEATCMS_admin ul li.dragover,
.PEATCMS_admin .order.dragover {
    border-top: solid 2px var(--admin-color-accent);
}

/*.admin.menu_editor ul li span.drag_handle,
.PEATCMS_admin */
.drag_handle {
    cursor: grab;
    font-weight: bold;
    color: var(--admin-color-accent);
}

/*.admin.menu_editor ul li span.drag_handle:active,
.PEATCMS_admin */
.drag_handle:active {
    cursor: grabbing;
}

.PEATCMS_admin h3.divider {
    display: block;
    color: var(--admin-color-key);
    font-size: 125%;
    padding-top: .5em;
    padding-bottom: .2em;
    text-transform: capitalize;
}

.PEATCMS_admin h3.divider button {
    margin-left: 5px;
}

.PEATCMS_admin .linkable > div:last-child {
    margin-bottom: 2rem;
}

.PEATCMS_admin .linkable button::after {
    content: '\26AC\26AC';
}

.PEATCMS_admin .linkable button.linked::after,
.PEATCMS_admin .linkable .linked button::after {
    content: '\26AD';
}

.process_area {
    height: 2rem;
}

/*.PEATCMS_admin .process_area .button {
    cursor: pointer;
    width: auto;
    height: 1.8rem;
    background-image: none;
    padding: .09rem .21rem;
    background-color: #f3f3f6;
    box-shadow: none;
    border: none;
}
.PEATCMS_admin .process_area .button option {

}
*/
.drop_area {
    width: 90%;
    height: 200px;
    border: dotted 3px var(--admin-color-accent-light);
    overflow: hidden; /* for the progress indicator */
}

.drop_area.dragover {
    border-color: var(--admin-color-accent);
}

.drop_area .progress {
    width: 100%;
    height: 100%;
    margin-top: 100%;
    background-color: var(--admin-color-accent-transparent);
    color: var(--admin-color-paper);
    font-size: 10px;
}

body .PEATCMS.progress {
    position: fixed;
    width: 5px;
    height: 100vh;
    margin-top: 100%;
    background-color: var(--admin-color-accent);
    left: 0;
    top: 0;
    z-index: 101; /* just in front of console */
}

/**
 * PEATCMS_admin please use normal font
 */
body .PEATCMS_admin,
body .PEATCMS_admin * {
    font-family: Arial, sans-serif;
    font-size: 1rem;
    /*padding: 0;
    margin: 0;*/
}

/**
 * Neutralize some specific colors
 */
/*body #admin_console_button label,*/
body .PEATCMS_admin .linkable a,
body .PEATCMS_admin label,
body .PEATCMS_admin h1,
body .PEATCMS_admin h2,
body .PEATCMS_admin h3,
body .PEATCMS_admin h4,
body .PEATCMS_admin h5,
body .PEATCMS_admin h6,
body .PEATCMS_admin em,
body .PEATCMS_admin strong,
body .PEATCMS_admin header,
body .PEATCMS_admin div,
body .PEATCMS_admin span,
body .PEATCMS_admin p {
    color: var(--admin-color-key);
}

/* admin items that are only visible when hovering */
.PEATCMS_admin .onhover {
    display: none;
}

.PEATCMS_admin:hover .onhover {
    display: inline-block;
}

/**
 * The one admin button
 */
#admin_console_button {
    position: fixed;
    bottom: .5em;
    left: .5em;
    background-color: var(--admin-color-paper-see-through);
    color: var(--admin-color-key);
    padding: .25em;
    border-radius: 2em;
    border: solid 3px var(--admin-color-accent);
    z-index: 100;
    line-height: 0;
    text-align: center;
}

.PEATCMS_admin .hoverstate {
    background: transparent;
    box-shadow: none;
    cursor: pointer;
}

.PEATCMS_admin input[type=submit],
.PEATCMS_admin input[type=button],
.PEATCMS_admin .button,
.PEATCMS_admin button,
.PEATCMS_admin ::file-selector-button {
    /* reset a button */
    width: auto;
    height: auto;
    background-color: inherit;
    border-radius: 0;
    border: 0;
    color: var(--admin-color-accent);
    cursor: pointer;
    padding: .1rem .21rem;
    box-shadow: none;
    text-decoration: none;
}

.PEATCMS_admin .hoverstate:hover,
.PEATCMS_admin input[type=submit]:hover,
.PEATCMS_admin input[type=button]:hover,
.PEATCMS_admin .button:hover,
.PEATCMS_admin ::file-selector-button:hover,
input[type="checkbox"] + label:before:hover, /* pretty checkboxes */
.PEATCMS_admin button:hover {
    /*outline: solid 2px var(--admin-color-accent-fierce);
    outline-offset: -2px;*/
    color: var(--admin-color-accent-fierce);
}

#admin_console_button .hoverstate {
    outline-offset: 1px;
}

#admin_console_button label {
    cursor: pointer;
}

.peatcms_ctrl_key_tip {
    position: absolute;
    display: block;
    padding: 0 2px;
    background-color: var(--admin-color-accent-fierce);
    height: 1.5rem;
    line-height: 1.5rem;
    white-space: nowrap;
    z-index: 101;
}

#PEATCMS_edit_menu {
    cursor: pointer;
    position: fixed; /* because boundingRect = relative to view */
    background-color: var(--admin-color-paper-see-through);
    border: solid 3px var(--admin-color-accent);
    padding: 0 .25em;
    border-radius: 2em;
    margin: -1px 4px;
    color: var(--admin-color-accent);
}

/**
 * the various screens / consoles that can be activated by admin
 */
.PEATCMS_admin .console_screen {
    background-color: var(--admin-color-paper);
    position: fixed;
    bottom: 0;
    left: 0;
}
/* ... */

